Routing and Data service

--- a/NGbasic/src/app/home/home.component.html
+++ b/NGbasic/src/app/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<h1 [ngClass]="{
+    'gray': h1Style,
+    'large': !h1Style
+  }">Home</h1>
+<button (click)="firstClick()">click me</button>
+
+<ul *ngIf="users">
+  <li *ngFor="let user of users.data">
+    <img [src]="user.avatar">
+    <p>{{ user.first_name }} {{ user.last_name }}</p>
+  </li>
+</ul>
