--- a/NGbasic/src/app/home/home.component.html
+++ b/NGbasic/src/app/home/home.component.html
@@ -3,6 +3,7 @@
     'large': !h1Style
   }">Home</h1>
 <button (click)="firstClick()">click me</button>
+<h1>Users</h1>
 
 <ul *ngIf="users">
   <li *ngFor="let user of users.data">
